--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 
-/* CSS Assets */
-@import '/css/navbar.css';
+/* Components file */
+@import url("/css/components/navbar.css");
 
 /* Main CSS */
 * {
@@ -39,7 +39,8 @@ body {
 }
 
 .container {
-  width: 100%;
+  width: 980px;
+  margin: 0 auto;
 }
 
 /* Attributions */
