--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -2,6 +2,7 @@ nav {
   color: var(--dark-grayish-blue);
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   gap: 2em;
   margin: 20px 0;
 }
@@ -17,4 +18,8 @@ nav ul li a {
 
 nav ul li a:hover {
   color: var(--dark-blue);
+}
+
+nav .icon-cart {
+  width: 20px;
 }
