--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -1,25 +1,38 @@
 nav {
   color: var(--dark-grayish-blue);
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 2em;
   margin: 20px 0;
 }
 
-nav ul li {
+.nav-left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 2.5em;
+}
+
+.nav-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 2.5em;
+}
+
+.nav-left ul li {
   display: inline;
   padding: 0 10px;
 }
 
-nav ul li a {
+.nav-left ul li a {
   color: var(--dark-grayish-blue);
 }
 
-nav ul li a:hover {
+.nav-left ul li a:hover {
   color: var(--dark-blue);
 }
 
-nav .icon-cart {
+.nav-right .icon-cart {
   width: 20px;
 }
