--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -3,7 +3,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0;
+  margin-top: 20px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid var(--grayish-blue);
 }
 
 .nav-left {
