--- a/css/components/card.css
+++ b/css/components/card.css
@@ -16,6 +16,25 @@
 }
 
 /* Card Images */
-.card-img .card-img-main {
+/* .card-img .card-img-main {
+  border-radius: 20px;
+} */
+
+.card-img {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-img-main {
+  width: 70%;
+  border-radius: 20px;
+}
+
+.card-img-thumbnail-container {
+  padding-top: 10px;
+}
+
+.card-img-thumbnail-container img {
+  width: 20%;
   border-radius: 20px;
 }
