--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -33,6 +33,8 @@ nav {
 
 .nav-left ul li a:hover {
   color: var(--dark-blue);
+  border-bottom: 2px solid var(--orange);
+  border-spacing: 10px;
 }
 
 .nav-right .icon-cart {
