--- a/css/components/card.css
+++ b/css/components/card.css
@@ -14,10 +14,17 @@
   margin-top: 5%;
 }
 
+.card h1 {
+  font-size: 38px;
+  line-height: 40px;
+  margin-top: 20px;
+}
+
 .card h2 {
   text-transform: uppercase;
   color: var(--orange);
   font-size: 16px;
+  letter-spacing: 1px;
 }
 
 /* Card Images Style */
