--- a/css/components/card.css
+++ b/css/components/card.css
@@ -93,3 +93,15 @@
   font-size: 14px;
   text-decoration: line-through;
 }
+
+.card-cart {
+  margin-top: 30px;
+}
+
+.card-cart-quantity {
+  display: flex;
+  flex-direction: row;
+  background-color: var( --light-grayish-blue);
+  padding: 5px;
+  border-radius: 10px;
+}
