--- a/css/components/card.css
+++ b/css/components/card.css
@@ -132,6 +132,8 @@
   padding: 10px 30px;
   font-size: 18px;
   border: none;
+  box-shadow: 0px 10px 5px var(--light-grayish-blue);
+  cursor: pointer;
 }
 
 .card-cart-btn-add img {
